--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3796,8 +3796,8 @@ Page Title Area Style
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.45;
-    background-color: #000000;
+    opacity: 0.7;
+    background-color: #1569ae;
 }
 
 
@@ -6389,6 +6389,7 @@ Services Details Area Style
 
 .services-details-content .services-contents {
     margin-bottom: 20px;
+    margin-right: 35px;
 }
 
 .services-details-content .services-contents h2 {
