--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,8 +183,12 @@ textarea.form-control {
     height: auto;
 }
 
+.paddingfix1 {
+    padding-left:100px;
+}
+
 .ptb-100 {
-    padding-top: 100px;
+    padding-top: 250px;
     padding-bottom: 100px;
 }
 
@@ -206,7 +210,7 @@ textarea.form-control {
 }
 
 .pb-70 {
-    padding-bottom: 70px;
+    /* padding-bottom: 70px; */
 }
 
 .mt-minus-100 {
@@ -3779,8 +3783,8 @@ Page Title Area Style
 
 .page-title-area {
     position: relative;
-    padding-top: 285px;
-    padding-bottom: 150px;
+    padding-top: 250px;
+    padding-bottom: 75px;
     text-align: center;
     background-position: center center;
     background-repeat: no-repeat;
@@ -3797,7 +3801,7 @@ Page Title Area Style
     height: 100%;
     z-index: -1;
     opacity: 0.7;
-    background-color: #1569ae;
+    background-color: #1569ae;  
 }
 
 
@@ -3984,6 +3988,7 @@ FAQ Area Style
 .faq-area {
     position: relative;
     z-index: 1;
+    padding-bottom: 15px;
 }
 
 .faq-area .faq-shape-1 {
